--- a/src/styles/_mixins.less
+++ b/src/styles/_mixins.less
@@ -193,6 +193,15 @@
   .align-items(center);
 }
 
+.displayRowEspace() {
+  .flex-display(flex);
+  .flex-direction(row);
+  .flex-wrap(nowrap);
+  .justify-content(space-between);
+  .align-content(center);
+  .align-items(center);
+}
+
 .displayColumnCenter() {
   .flex-display(flex);
   .flex-direction(column);
