--- a/src/styles/_layout.less
+++ b/src/styles/_layout.less
@@ -13,13 +13,14 @@ html {
 }
 
 //
-@header-h : 20vw;
+@header-h : 12vw;
 @header-w : 100%;
-@footer-h : 20vw;
+@footer-h : 25vw;
+@cfooter-h : @footer-h/2;
 //
 @view-h : 100vh - @header-h - @footer-h;
 //
-@view-header-h: 12vw;
+@view-header-h: 15vw;
 @view-content-h : 20vw;
 @view-footer-h : 20vw;
 // Mixings
