--- a/src/styles/_mixins.less
+++ b/src/styles/_mixins.less
@@ -184,6 +184,7 @@
   .align-content(center);
   .align-items(center);
 }
+
 .displayColumnExpand() {
   .flex-display(flex);
   .flex-direction(column);
@@ -196,6 +197,15 @@
 .displayRowEspace() {
   .flex-display(flex);
   .flex-direction(row);
+  .flex-wrap(nowrap);
+  .justify-content(space-between);
+  .align-content(center);
+  .align-items(center);
+}
+
+.displayColumnEspace() {
+  .flex-display(flex);
+  .flex-direction(column);
   .flex-wrap(nowrap);
   .justify-content(space-between);
   .align-content(center);
