--- a/src/styles/themes/_theme_colors.less
+++ b/src/styles/themes/_theme_colors.less
@@ -1,6 +1,6 @@
 // ------------------------------------------------- //
 // --                                             -- //
-// -- Name : Layout LESS File                     -- //
+// -- Name : Colors LESS File                     -- //
 // --                                             -- //
 // -- Author : Jorge Luis Mayorga Taborda         -- //
 // --       -> jl.mayorga236@gmail.com            -- //
@@ -12,13 +12,19 @@
 // -- Update : 24/07/2018                         -- //
 // ------------------------------------------------- //
 
-//  -----------------------------------------------  //
-//  Import theme elements.                           //
-//  -----------------------------------------------  //
-
 // ------------------------------------------------- //
-@import "layouts/_layouts_sizes";
-@import "layouts/_layouts_views";
-@import "layouts/_layouts_tabs";
-@import "layouts/_layouts_gestures";
+// -- Main Colors ---------------------------------- //
+// ------------------------------------------------- //
+
+@color-white : #fff;
+@color-black: #363636;
+
+@color-blue: #182b7e;
+@color-red : #FD0544;
+@color-yellow : #FBCD04;
+
+@color-gray : #E5E5E5;
+@color-dark-gray : #999999;
+@color-black : #fff;
+
 // ------------------------------------------------- //
