--- a/src/styles/themes/_theme_titles.less
+++ b/src/styles/themes/_theme_titles.less
@@ -1,6 +1,6 @@
 // ------------------------------------------------- //
 // --                                             -- //
-// -- Name : Layout LESS File                     -- //
+// -- Name : Titles LESS File                     -- //
 // --                                             -- //
 // -- Author : Jorge Luis Mayorga Taborda         -- //
 // --       -> jl.mayorga236@gmail.com            -- //
@@ -12,13 +12,22 @@
 // -- Update : 24/07/2018                         -- //
 // ------------------------------------------------- //
 
-//  -----------------------------------------------  //
-//  Import theme elements.                           //
-//  -----------------------------------------------  //
+// ------------------------------------------------- //
+// -- Main Colors ---------------------------------- //
+// ------------------------------------------------- //
+.title {
+  width: fit-content;
+  height: fit-content;
+  display: block;
+  font-family: "font-light";
+  font-size: 1em;
+  background-color: @color-white;
+  border: 0.1em solid @color-gray;
+  border-radius: 1em;
+  margin: 0em auto;
+  margin-top: 1em;
+  padding: 0.5em 2em;
+}
 
-// ------------------------------------------------- //
-@import "layouts/_layouts_sizes";
-@import "layouts/_layouts_views";
-@import "layouts/_layouts_tabs";
-@import "layouts/_layouts_gestures";
-// ------------------------------------------------- //
+.subtitle {
+}
