--- a/src/styles/_theme.less
+++ b/src/styles/_theme.less
@@ -1,194 +1,25 @@
 // ------------------------------------------------- //
-// -- Theme Stylesheet LESS for AutoStudio-cr.com -- //
-// ------------------------------------------------- //
-// ------------------------------------------------- //
-// -- Main Colors ---------------------------------- //
-// ------------------------------------------------- //
-@color-white : #fff;
-@color-blue: #182b7e;
-@color-red : #FD0544;
-@color-gray : #E5E5E5;
-@color-dark-gray : #999999;
-@color-black : #fff;
-@color-yellow : #FBCD04;
-@color-black: #363636;
-// ------------------------------------------------- //
-// ------------------------------------------------- //
-// -- Views Theme ---------------------------------- //
-// ------------------------------------------------- //
-.view {
-  background-color: @color-gray;
-  width: 100vw;
-  height: 100vh;
-  .flex-centerAll();
-}
-
-// ------------------------------------------------- //
-// Forms Elements (BUTTONS, INPUTS, ETC)
-// ------------------------------------------------- //
-.title {
-  width: fit-content;
-  height: fit-content;
-  display: block;
-  font-family: "font-light";
-  font-size: 1em;
-  background-color: @color-white;
-  border: 0.1em solid @color-gray;
-  border-radius: 1em;
-  margin: 0em auto;
-  margin-top: 1em;
-  padding: 0.5em 2em;
-}
-
-.subtitle {
-}
-
-.thumb {
-  width: 15vh;
-  display: block;
-  margin: 0 auto;
-}
-
-.button {
-  text-transform: capitalize;
-  font-size: 0.8em;
-  background-color: @color-red;
-  color: @color-white;
-  display: block;
-  font-family: "font-light";
-  border: none;
-  border: 0.1em solid @color-red;
-  border-radius: 1.25em;
-  padding: 0.25em 1.25em;
-  margin: 0.25em;
-  width: fit-content;
-}
-
-.button-group {
-  width: 100%;
-  display: block;
-  .displayRowCenter();
-  &.fix {
-    position: absolute;
-    bottom: 0.75 * @footer-h;
-    width: 100vw;
-    left: 0px;
-    .button {
-      width: 30%;
-      padding: 0.5em 0em;
-      margin: 0 auto;
-    }
-  }
-}
-
-.footenote {
-  font-size: 0.8em;
-  font-family: "font-light";
-  text-align: center;
-  padding: 1em 0em;
-  position: relative;
-  top: 1em;
-}
-
-.disclaimer {
-  font-size: 0.65em;
-  font-family: "font-light";
-  text-align: center;
-  display: block;
-  width: 70%;
-  margin: 0 auto;
-  color: @color-red;
-  position: absolute;
-  bottom: 1.25 * @footer-h;
-}
-
-.list {
-  display: block;
-  width: 80%;
-  margin: 0 auto;
-  font-family: "font-light";
-  padding: 0em 0em;
-  font-size: 0.8em;
-}
-
-.list-item {
-  margin: 0.85em 0em;
-  .tick {
-    width: 1em;
-    height: 1em;
-    background-image: url("/static/img/checkmark.png");
-    background-size: contain;
-    background-position: center center;
-    background-repeat: no-repeat;
-    display: inline-block;
-    margin-right: 0.5em;
-  }
-  p {
-    display: inline-block;
-    width: auto;
-    max-width: calc(100% - 2em);
-  }
-}
-
-.card {
-  display: block;
-  margin: 1em 0em;
-  img {
-    display: block;
-    width: 15vh;
-    margin: 0 auto;
-  }
-  button {
-    margin: 0 auto;
-  }
-  &:last-child {
-    padding-bottom: 5vh;
-  }
-}
-
-.card-list {
-  width: 100%;
-  min-height: fit-content;
-  height: calc(70vh - 12.5vw);
-  display: block;
-  .displayColumnExpand();
-}
-
-.tab-header {
-}
-
-.tab-content {
-}
-
-.big-square {
-  background-color: @color-white;
-  border: 2px solid @color-gray;
-  color: @color-dark-gray;
-  padding: 1em;
-  width: 25vw;
-  height: 25vw;
-  text-align: center;
-  outline: none;
-  h3 {
-    text-align: center;
-  }
-  img {
-    width: 60%;
-    display: block;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 5%;
-    margin: 0 auto;
-  }
-  &.active {
-    background-color: @color-red;
-    border: 2px solid @color-red;
-    color: @color-white;
-  }
-}
-
+// --                                             -- //
+// -- Name : Themes LESS File                     -- //
+// --                                             -- //
+// -- Author : Jorge Luis Mayorga Taborda         -- //
+// --       -> jl.mayorga236@gmail.com            -- //
+// --       -> wallamejorge@hotmail.com           -- //
+// --                                             -- //
+// -- Bogotá, Colombia                            -- //
+// --                                             -- //
+// --                                             -- //
+// -- Update : 24/07/2018                         -- //
 // ------------------------------------------------- //
 
-.bg-test {
-  background-color: #fbcd04;
-}
+//  -----------------------------------------------  //
+//  Import theme elements.                           //
+//  -----------------------------------------------  //
+
+// ------------------------------------------------- //
+@import "themes/_theme_colors.less";
+@import "themes/_theme_titles.less";
+@import "themes/_theme_buttons.less";
+@import "themes/_theme_lists.less";
+@import "themes/_theme_cards.less";
+// ------------------------------------------------- //
