--- a/src/styles/themes/_theme_cards.less
+++ b/src/styles/themes/_theme_cards.less
@@ -25,7 +25,7 @@
   .displayRowCenter();
   &.fix {
     position: absolute;
-    bottom: 0.75 * @footer-h;
+    bottom: 0px;
     width: 100vw;
     left: 0px;
     .button {
@@ -54,7 +54,7 @@
   margin: 0 auto;
   color: @color-red;
   position: absolute;
-  bottom: 1.25 * @footer-h;
+  bottom: 0px;
 }
 
 .list {
