--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -13,3 +13,12 @@
 @import "_animations.less";
 // -------------------------------------------//
 
+body,
+html {
+  color: @color-black;
+  background-color: @color-white;
+  width: 100vw !important;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
