--- a/src/styles/layouts/_layouts_views.less
+++ b/src/styles/layouts/_layouts_views.less
@@ -7,6 +7,7 @@
   height: 100%;
   display: block;
 }
+
 // -------------------------------------------------- //
 // -- Layout Stylesheet LESS for AutoStudio-cr.com -- //
 // -------------------------------------------------- //
@@ -24,13 +25,19 @@
   .vw-footer {
     height: @view-frame-footer;
     overflow: hidden;
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
+    top: auto;
   }
 }
+
 // -------------------------------------------------- //
 .contact-cover {
   width: 100%;
   display: block;
 }
+
 .row-layout() {
   .wrapper {
     width: 100vw;
