--- a/src/styles/themes/_theme_cards.less
+++ b/src/styles/themes/_theme_cards.less
@@ -25,7 +25,8 @@
   .displayRowCenter();
   &.fix {
     position: absolute;
-    bottom: 0px;
+    top: auto;
+    bottom: @view-frame-footer;
     width: 100vw;
     left: 0px;
     .button {
@@ -143,7 +144,6 @@
 }
 
 // ------------------------------------------------- //
-
 .bg-test {
   background-color: #fbcd04;
 }
