--- a/src/styles/layouts/_layouts_sizes.less
+++ b/src/styles/layouts/_layouts_sizes.less
@@ -1,3 +1,3 @@
-@view-frame-height : 100%;
 @view-frame-header : calc((10vw + 10vh)/2);
 @view-frame-footer : calc((20vw + 20vh)/2);
+@view-frame-height : calc(100vh - @view-frame-header - @view-frame-footer);
